--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.31.3",
+    "@clerk/nextjs": "^6.31.4",
+    "@hookform/resolvers": "^5.2.1",
+    "@prisma/client": "^5.15.0",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -23,19 +25,28 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.540.0",
-    "next": "15.4.7",
-    "react": "19.1.0",
+    "next": "^15.4.7",
+    "prisma": "^5.15.0",
+    "react": "^19.1.0",
     "react-day-picker": "^9.9.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.62.0",
+    "react-spinners": "^0.17.0",
     "tailwind-merge": "^3.3.1",
-    "vaul": "^1.1.2"
+    "vaul": "^1.1.2",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.7",
-    "tailwindcss": "^4",
+    "@types/estree": "^1.0.8",
+    "@types/json-schema": "^7.0.15",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.33.0",
+    "eslint-config-next": "^15.4.7",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.12",
+    "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.3.7"
   }
 }
