--- a/package.json
+++ b/package.json
@@ -26,15 +26,18 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.540.0",
     "next": "^15.4.7",
+    "next-themes": "^0.4.6",
     "prisma": "^5.15.0",
     "react": "^19.1.0",
     "react-day-picker": "^9.9.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.62.0",
     "react-spinners": "^0.17.0",
+    "recharts": "^3.1.2",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
-    "zod": "^4.0.17"
+    "zod": "^4.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
