--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "inngest": "^3.40.1",
     "lucide-react": "^0.540.0",
     "next": "^15.4.7",
     "next-themes": "^0.4.6",
@@ -34,6 +35,7 @@
     "react-hook-form": "^7.62.0",
     "react-spinners": "^0.17.0",
     "recharts": "^3.1.2",
+    "resend": "^6.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
@@ -48,6 +50,7 @@
     "eslint": "^9.33.0",
     "eslint-config-next": "^15.4.7",
     "postcss": "^8.5.6",
+    "react-email": "4.2.8",
     "tailwindcss": "^4.1.12",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.3.7"
