--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@arcjet/next": "^1.0.0-beta.10",
     "@clerk/nextjs": "^6.31.4",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.2.1",
     "@prisma/client": "^5.15.0",
     "@radix-ui/react-checkbox": "^1.3.3",
